// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImage /> should be display image of product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`<ProductImage /> should be render correctly 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.png"
/>
`;
